<resources>
    <string name="app_name">FlickrGallery</string>
    <string name="search_hint">Search Flickr</string>
    <string name="search">Search</string>
    <string name="clear_search">Clear Search</string>
    <string name="start_polling">Poll for new pictures</string>
    <string name="stop_polling">Stop polling</string>
    <string name="new_pictures_title">New PhotoGallery Pictures</string>
    <string name="new_pictures_text">You have new pictures in PhotoGallery.</string>
    <string name="networt_unavailable">Network is unavailable, please turn on</string>
    <string name="login_menu">Login Flickr</string>
    <string name="log_in_text">Please enter your verification code(Including the connector):</string>
    <string name="get_token_button">Get access</string>
    <string name="confirm_button">Confirm</string>
    <string name="toast_verify_token_success">Login successfully</string>
    <string name="toast_verify_token_failed">Login failed, please check your verification code</string>
    <string name="comment">Comments: </string>
    <string name="favorites">Favorites: </string>
    <string name="views">Views: </string>
    <string name="fullToken_unavailable">You haven\'t login</string>
    <string name="following">Followings: </string>
    <string name="photoset">Photosets:</string>
    <string name="location">Location: </string>
    <string name="posted_time">Posted at: </string>
    <string name="description_title_profile">Description: </string>
    <string name="rule_title">Rule: </string>
    <string name="group_profile">Groups: </string>
    <string name="member_title_profile">Members: </string>
    <string name="topic_title_profile">Topics: </string>
    <string name="comment_successfully">Posted comment successfully</string>
    <string name="comment_hint">Add a comment</string>
    <string name="send_button">Send</string>
    <string name="content_empty">Please write something first</string>
    <string name="following_user_profile">Follow</string>
    <string name="unFollowing_user_profile">Unfollow</string>
    <string name="view_user_page">Personal page</string>
    <string name="join_group">Join in</string>
    <string name="leave_group">Leave</string>
    <string name="join_group_successfully">Join group successfully</string>
    <string name="leave_group_successfully">Leave group successfully</string>
    <string name="leave_group_message_dialog">Do you confirm to leave the group ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="topic_reply_sum_title">Total reply: </string>
    <string name="add_topic_reply">Reply</string>
    <string name="reply_topic_hint">Reply the topic</string>
    <string name="reply_successfully">Reply successfully</string>
    <string name="post_new_photo">Post new photo</string>
    <string name="title_new_photo_hint">Title</string>
    <string name="description_new_photo_hint">Description</string>
    <string name="add_photo_hint">9 pictures at most</string>
    <string name="cancel_text">Cancel</string>
    <string name="post_text">Post</string>
    <string name="photo_full_toast">You have added 9 pictures already</string>
    <string name="add_photo_toast">Add more pictures</string>
    <string name="menu_title_upload_photo">Upload photo</string>
    <string name="delete_photo_confirm_dialog">Do you confirm to remove this photo ?</string>
    <string name="Upload_photo_successfully">Uploaded photo successfully</string>
    <string name="same_photo_toast_upload_photo">You have picked this photo</string>
    <string name="back_key_note">Do you confirm to go back ?</string>
    <string name="Cancel_msg_upload_photo">Do you confirm to cancel and go back ?</string>
    <string name="no_photo_added_upload_photo">Please add some photo first</string>
    <string name="delete_photo_successfully">Delete photo successfully</string>
    <string name="delete_photo_menu">Delete photo</string>
    <string name="delete_photo_confirmation">Do you confirm to delete photo ?</string>
    <string name="search_photo">Search photos</string>
    <string name="search_user_by_email">Search users by Email</string>
    <string name="search_user_by_username">Search users by user name</string>
    <string name="search_group">Search groups</string>
    <string name="no_select_search_activity">Please select a search type first</string>
    <string name="over_count_selected">You can select one search type only</string>
    <string name="add_as_fav_success">Add as favorite</string>
    <string name="remove_from_fav_success">Remove favorite</string>
    <string name="downloading_photo_progressdialog">Downloading photo&#8230;</string>
    <string name="save_photo_title_menu">Save</string>
    <string name="save_photo_success">Saved the photo</string>
    <string name="view_original_photo">Original photo</string>
    <string name="check_photoset">Check photoset</string>
</resources>
