<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
       android:layout_height="match_parent">

    <EditText
        android:id="@+id/mini_token_editText"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/textView"
        style="@style/common_style_layout"
        android:layout_marginStart="10dp"
        android:layout_above="@+id/mini_token_editText"
        android:text="@string/log_in_text"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/confirm_button"
        style="@style/common_style_layout"
        android:layout_below="@id/mini_token_editText"
        android:layout_marginTop="12dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:text="@string/confirm_button"/>

    <Button
        android:id="@+id/get_token_button"
        style="@style/common_style_layout"
        android:layout_toStartOf="@id/confirm_button"
        android:layout_below="@+id/mini_token_editText"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:text="@string/get_token_button"/>

</RelativeLayout>