<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/group_icon_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/brain_up_close"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/colorPrimary"/>

        <TextView
            android:id="@+id/group_name_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="10dp">

            <RelativeLayout
                android:id="@+id/member_layout_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/member_title_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/member_title_profile"
                    android:textStyle="bold|italic"
                    android:textColor="@color/colorPrimaryDark"/>

                <TextView
                    android:id="@+id/member_number_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/member_title_profile"
                    android:layout_marginStart="10dp"
                    android:text="0"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/topic_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/member_layout_profile"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/topic_title_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/topic_title_profile"
                    android:textStyle="bold|italic"
                    android:textColor="@color/colorPrimaryDark"/>

                <TextView
                    android:id="@+id/topic_number_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/topic_title_profile"
                    android:layout_marginStart="10dp"
                    android:text="0"/>

            </RelativeLayout>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorBlack"/>

        <RelativeLayout
            android:id="@+id/description_layout_groupProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/description_title_groupProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_title_profile"
                android:textStyle="bold|italic"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/description_content_groupProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description_title_groupProfile"/>

        </RelativeLayout>

        <!--使用自定义ExpandableHeightGridView防止与scrollview冲突,
        设置android:focusable防止打开时不是scrollview顶部-->
        <com.example.yanhoor.flickrgallery.ExpandableHeightGridView
            android:id="@+id/photo_gridView_groupProfile"
            android:layout_width="match_parent"
            android:layout_height="420dp"
            android:layout_marginTop="12dp"
            android:focusable="false"
            android:columnWidth="160dp"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth"/>

    </LinearLayout>

</ScrollView>